# registration

./: .gitignore  .tm_properties  Capfile  LICENSE  Rakefile  example_pbs_script
config/: .gitignore  .tm_properties  all_files.txt  anomalous_slices  downsample_128x128x32_files.txt  downsample_64x64x16_files.txt  image_dimensions.yml  picked_files.txt  registration_parameters.yml  registration_parameters_128.yml  registration_parameters_64.yml  slice_info.yml
config/Goat11081/: image_dimensions.yml  registration_parameters.yml
config/Goat11081/ROIs/: whole_heart.yml
config/Goat11081/image_lists/: HiRes_files.txt  LoRes_files.txt  (+1 more)
config/Rabbit1/: registration_parameters_128.yml  registration_parameters_64.yml
config/Rat24/: deformable_parameters.yml  downsample_ratios.yml.example  registration_parameters.yml
config/Rat28/: 2_slice_parameters.yml  HiRes_pair_parameters.yml  image_dimensions.yml  image_spacings.yml  picked_files.txt  registration_parameters.yml
config/dummy/: HiRes_pair_parameters.yml  image_spacings.yml
config/noisy_dummy/: registration_parameters.yml
graphing/: before_and_after_HiRes_pair_registration.py  before_and_after_registration.py  compare_final_metric_values.py  metric_values.py  plot_ground_truth_distances.py  plot_metric_values_and_differences.py  registration_graphs.py  stack_metric_values.py
graphing/maths/: quaternion.py
graphing/sequences/: matplotlib_plotter.py  plotter_base.py
graphing/sources/: centered_rigid_reader.py  iteration_data.py  mhd_reader.py  reader_base.py  ssv_reader.py  stdout_reader.py  versor_reader.py  versor_transform_reader.py
image_processing/: dodgy_files.rb  downloader.rb  flipper.rb  uploader.rb
image_processing/lib/: image_processing.rb
itk/: .gitignore  BuildVolumes.cxx  CMakeLists.txt  CommandIterationUpdate.hpp  FlipImage.cxx  Framework2D.hpp  Framework3D.hpp  MRI.hpp  PermuteAxes.cxx  Register.cxx  RotateImage.cxx  ShrinkImage.cxx  Stack.hpp  helper_functions.hpp  ideas  itk_project.tmproj  test.cpp
itk/Frameworks/: Framework2DBase.hpp  Framework2DRabbit.hpp  Framework2DRat.hpp  Framework3D.hpp
itk/Observers/: CommandIterationUpdate.hpp  CommandObserverBase.hpp  FileIterationUpdate.hpp  MultiResRegistrationCommand.hpp  StdOutIterationUpdate.hpp
itk_source/: ApplyStructureTensor.cxx  BuildColourVolume.cxx  BuildProgressVolume.cxx  BuildRGBImage.cxx  BuildRedBlueChannelComparison.cxx  BuildVolumeFromSlices.cxx  BuildVolumes.cxx  CMakeLists.txt  CalculateGroundTruthError.cxx  CalculateRelativeGroundTruthError.cxx  ComposeBananaTransformSeries.cxx  ComposeTransformSeries.cxx  ComputeDiffusionTransforms.cxx  ConvertImage.cxx  ConvertRGBAToRGB.cxx  ConvertScalarToRGBColormap.cxx  ConvertVolume.cxx  CropImage.cxx  DeformableRegistration.cxx  ExtractLargestEigenvectorComponentsFromTensor.cxx  FlipImage.cxx  GenerateNoisyTransforms.cxx  ImageStats.cxx  IntensifyImage.cxx  MRI.hpp  PadImage.cxx  Register.cxx  Register2Slices.cxx  RegisterHiResPairs.cxx  RegisterLoResPair.cxx  RegisterROI.cxx  RegisterSlicePair.cxx  RegisterVolumes.cxx  RemoveLabelObjects.cxx  ResampleBMP.cxx  RescaleIntensity.cxx  RotateImage.cxx  ShrinkImage.cxx  SmoothVolume.cxx  SplitVolumeIntoSlices.cxx  (+8 more)
itk_source/Frameworks/: CMakeLists.txt  Framework2DBase.cxx  Framework2DBase.hpp  Framework2DRabbit.hpp  Framework2DRat.cxx  Framework2DRat.hpp  Framework3D.hpp
itk_source/Observers/: CommandObserverBase.hpp  FileIterationUpdate.hpp  MultiResRegistrationCommand.hpp  StdOutIterationUpdate.hpp
itk_source/examples/: CMakeLists.txt  ImageRegistration5.cxx
itk_source/lib/: CMakeLists.txt  Dirs.cxx  Dirs.hpp  IOHelpers.hpp  ImageStats.hpp  NormalizeImages.hpp  OptimizerConfig.hpp  Parameters.cxx  Parameters.hpp  PathHelpers.hpp  Profiling.cxx  ProjectRootDir.h.in  RegistrationParameters.cxx  RegistrationParameters.hpp  ScaleImages.hpp  Stack.cxx  Stack.hpp  Stack.txx  StackBase.hpp  StackIOHelpers.hpp  StackTransforms.hpp  TransformInitializers.hpp  VolumeSplitter.hpp  itkExtractLargestEigenvectorFilter.h  itkExtractLargestEigenvectorFilter.txx  itkStructureTensorImageFilter.h  itkStructureTensorImageFilter.txx
itk_source/lib/Builders/: CMakeLists.txt  CenteredTransformPCAInitializer.h  CenteredTransformPCAInitializer.hxx  RegistrationBuilder.cxx  RegistrationBuilder.hpp  RegistrationBuilder.txx  StackInitializers.hpp
itk_source/lib/Builders/StackBuilders/: HiResStackBuilder.hpp  LoResStackBuilder.hpp  StackBuilder.hpp  StackBuilderBase.hpp
itk_source/lib/Frameworks/: CMakeLists.txt  Framework2DBase.cxx  Framework2DBase.hpp  Framework2DRat.cxx  Framework2DRat.hpp  Framework3D.hpp
itk_source/lib/ImageFunctions/: NormalizeImages.hpp  ScaleImages.hpp
itk_source/lib/Observers/: CommandObserverBase.hpp  FileIterationUpdate.hpp  MetricValueWriter.hpp  MetricValueWriterBase.hpp  MultiResRegistrationCommand.hpp  NormalizedDifferenceIterationUpdate.hpp  SimpleMetricValueWriter.hpp  SimpleTransformWriter.hpp  StdOutIterationUpdate.hpp  TransformWriter.hpp  TransformWriterBase.hpp  WriterCommand.hpp
itk_source/lib/RegistrationBuilders/: CMakeLists.txt  RegistrationBuilder.cxx  RegistrationBuilder.hpp
itk_source/lib/StackAligners/: CMakeLists.txt  StackAligner.cxx  StackAligner.hpp  StackAligner.txx
itk_source/test/: Brain.cxx  CMakeLists.txt
itk_source/test/data/: registration_parameters.yml
itk_source/test/data/expected_results/: HiResMask.mha  HiResStack.mha  LoResStack.mha  Transforms
pbs_scripts/: build_volumes  shrink_image
pbs_scripts/caribou/: build_hires_colour_volume
pbs_scripts/orac/: build_volumes  register_volumes  shrink_image  shrink_image2
pbs_scripts/sal/: build_colour_volume  build_volumes  deformable_registration  flip_image  register_hires_pairs  register_volumes  resample_bmp  rotate_image  shrink_image  shrink_image2
scripts/: dodgy_files.rb  downloader.rb  downsampler.rb  flipper.rb  ftp_adapter.rb  ftp_adaptor.rb  registration_graphs.py  uploader.rb
scripts/graphing/: registration_graphs.py
tasks/: bin.thor  init.rb  jobs.rb  output.thor  qstat.thor  qsub.thor  results.thor
(+76 files in other folders)
